# tablecheckdataoperations

./: README.md  pyproject.toml
src/: bigquery_setup.py  duckdb_transformation.py
src/tmp/: customer_stats.csv  frequent_visitors.csv  popular_dishes.csv  profitable_dishes.csv  restaurant_stats.csv
