[tool.poetry]
name = "Table Check Data Operations"
version = "0.1.0"
description = ""
authors = ["Justine Paul Padayao <justpaulpadayao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.2"
pandas = "^2.2.3"
google-cloud-bigquery = "^3.26.0"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
